<resources>
    <string name="app_name">Bank App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="enter_name">Name</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="enter_confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="register_here">Register Here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="back_to_login">Back to Login</string>
    <string name="register_done">User Registration Successfully Done</string>
    <string name="empty_fields_left">Empty fields left</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_too_short">Password too short</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_at_least_upper">Password needs to contain at least one upper case character</string>
    <string name="password_at_least_specialchar">Password needs to contain at least one special character</string>
    <string name="password_at_least_number">Password needs to contain at least one number</string>
    <string name="invalid_ifsc">Invalid IFSC Code</string>
    <string name="insufficient_amount">Insufficient amount. Amount should be up to 100000</string>
    <string name="invalid_user_password">Invalid username or password</string>
    <string name="user_exist">User already exist</string>
    <string name="unexpected_error">UnExpected Error</string>
    <string name="transfers">Transfers</string>
    <string name="payments">Payments</string>
    <string name="deposits">Deposits</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="menu">Menu</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_bank_name">Bank Name</string>
    <string name="enter_ifsc_code">IFSC Number</string>
    <string name="enter_ac_no">Account Number</string>
    <string name="enter_amount">Amount (Deposit)</string>
    <string name="hello">Hello,</string>
    <string name="rs">\u20B9</string>
    <string name="cat_navigationdrawer_button_show_content_description">Show navigation drawer</string>
    <string name="cat_navigationdrawer_button_hide_content_description">Hide navigation drawer</string>
    <string name="your_balance">Your Balance</string>
    <string name="account_number">Account Number</string>
    <string name="name">Name</string>
    <string name="pay_friends">Quick Pay</string>
    <string name="paying">Paying</string>
    <string name="pay_amount_hint"><font size="35"> </font></string>
    <string name="pay">Pay</string>
    <string name="deposit">Deposit</string>
    <string name="Profile">Profile</string>
    <string name="transactions">Transactions</string>
    <string name="add_a_note">Add a Note</string>
    <string name="enter_amount_deposit">Enter the amount to deposit</string>
    <string name="exclamatory_symbol">!</string>
    <string name="please_enter_amount">Please enter the amount</string>
    <string name="amount_added_success">Amount Added Successfully</string>
    <string name="unable_to_add_amount">Unable to add amount</string>
    <string name="unable_to_debit_amount">Unable to debit amount</string>
    <string name="amount_debit_success">Amount Debit Successfully</string>

</resources>