<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_item"
        android:title="@string/menu">
        <menu>
            <item
                android:id="@+id/item_transfers"
                android:icon="@drawable/transaction"
                android:title="@string/transfers"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/item_deposits"
                android:icon="@drawable/deposit"
                android:title="@string/deposits"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/item_payments"
                android:icon="@drawable/payments"
                android:title="@string/payments"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/item_settings"
                android:icon="@drawable/settings"
                android:title="@string/settings"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/item_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>